Changed colab notebook

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-PPO-sparse-rew/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-PPO-LL-rew/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -73,7 +73,7 @@
         "\n",
         "# Note the `git@github.com` syntax, which will fetch over SSH instead of\n",
         "# HTTP.\n",
-        "!git clone --branch test-PPO-sparse-rew git@github.com:Tuxliri/RL_rocket.git\n",
+        "!git clone --branch test-PPO-LL-rew git@github.com:Tuxliri/RL_rocket.git\n",
         "\n",
         "!cd .."
       ]
@@ -128,7 +128,6 @@
         "import numpy as np\n",
         "import stable_baselines3\n",
         "\n",
-        "from my_environment.utils.callbacks import FigureRecorderCallback\n",
         "from stable_baselines3 import A2C, DQN, PPO, TD3\n",
         "from tensorboard import program\n",
         "from stable_baselines3.common.callbacks import EvalCallback\n",
@@ -138,11 +137,14 @@
         "from stable_baselines3.common.env_util import make_vec_env\n",
         "from stable_baselines3.common.utils import set_random_seed\n",
         "from wandb.integration.sb3 import WandbCallback\n",
+        "from stable_baselines3.common.vec_env.dummy_vec_env import DummyVecEnv\n",
+        "from stable_baselines3.common.vec_env.vec_video_recorder import VecVideoRecorder\n",
         "\n",
         "import my_environment\n",
+        "from my_environment.utils.callbacks import FigureRecorderCallback\n",
         "from my_environment.wrappers.wrappers import DiscreteActions, DiscreteActions3DOF\n",
         "from my_environment.envs import Rocket1D\n",
-        "from gym.wrappers import FlattenObservation, FilterObservation"
+        "from gym.wrappers import FlattenObservation, FilterObservation\n"
       ]
     },
     {
@@ -191,9 +193,10 @@
         "initial_conditions_range = [0,50,0,0,10,0]\n",
         "timestep = 0.05\n",
         "\n",
+        "\n",
         "config = {\n",
         "\"policy_type\": \"MlpPolicy\",\n",
-        "\"total_timesteps\": 1.5e6,\n",
+        "\"total_timesteps\": int(1.5e5),\n",
         "}\n",
         "\n",
         "run = wandb.init(\n",
@@ -201,40 +204,37 @@
         "    config=config,\n",
         "    sync_tensorboard=True,  # auto-upload sb3's tensorboard metrics\n",
         "    monitor_gym=True,  # auto-upload the videos of agents playing the game\n",
-        "    # save_code=True,  # optional\n",
+        "    save_code=True,  # optional\n",
         ")\n",
+        "def make_env():\n",
+        "        env = gym.make(\n",
+        "        env_id,\n",
+        "        IC=initial_conditions,\n",
+        "        ICRange=initial_conditions_range,\n",
+        "        timestep=timestep,\n",
+        "        seed=RANDOM_SEED\n",
+        "        )\n",
+        "        \n",
+        "        # Define a new custom action space with only three actions:\n",
+        "        # - no thrust\n",
+        "        # - max thrust gimbaled right\n",
+        "        # - max thrust gimbaled left\n",
+        "        # - max thrust downwards\n",
+        "        disc_to_cont = [\n",
+        "            [0, -1], [-1, +1],\n",
+        "            [0, +1], [+1, +1]\n",
+        "                        ]\n",
+        "    \n",
+        "        env = DiscreteActions3DOF(env, disc_to_cont)\n",
+        "        env = Monitor(\n",
+        "            env,\n",
+        "            allow_early_resets=True,\n",
+        "            filename=\"logs_PPO\",\n",
+        "            )\n",
+        "        return env\n",
         "\n",
-        "env = gym.make(\n",
-        "    env_id,\n",
-        "    IC=initial_conditions,\n",
-        "    ICRange=initial_conditions_range,\n",
-        "    timestep=timestep,\n",
-        "    seed=RANDOM_SEED\n",
-        "    )\n",
-        "\n",
-        "\"\"\"\n",
-        "env = DiscreteActions(Rocket1D(env,reward_type='test3dof'))\n",
-        "env = FlattenObservation(FilterObservation(env, ['observation']))\n",
-        "\"\"\"\n",
-        "\n",
-        "# Define a new custom action space with only three actions:\n",
-        "# - no thrust\n",
-        "# - max thrust gimbaled right\n",
-        "# - max thrust gimbaled left\n",
-        "# - max thrust downwards\n",
-        "disc_to_cont = [\n",
-        "    [0, -1], [-1, +1],\n",
-        "    [0, +1], [+1, +1]\n",
-        "                ]\n",
-        "\n",
-        "env = DiscreteActions3DOF(env, disc_to_cont)\n",
-        "\n",
-        "\n",
-        "env = Monitor(\n",
-        "    env,\n",
-        "    allow_early_resets=True,\n",
-        "    filename=\"logs_PPO\",\n",
-        "    )"
+        "env = DummyVecEnv([make_env])\n",
+        "env = VecVideoRecorder(env, video_folder=f\"videos/{run.id}\", record_video_trigger=lambda x : x % 10000 == 0, video_length=200)\n"
       ]
     },
     {
@@ -260,23 +260,22 @@
         "    seed=RANDOM_SEED\n",
         ")\n",
         "\n",
-        "# Train the agent\n",
-        "TRAINING_TIMESTEPS = 15e6\n",
         "\n",
         "callbacksList = [\n",
-        "        EvalCallback(\n",
-        "            model.get_env(),\n",
-        "            eval_freq = 50e3,\n",
-        "            n_eval_episodes=1,\n",
-        "            # best_model_save_path=os.path.join(savefolder, filename),\n",
-        "            render=False,\n",
-        "            callback_after_eval=FigureRecorderCallback()\n",
-        "            ),\n",
-        "        WandbCallback(\n",
-        "            model_save_path=f\"models/{run.id}\",\n",
-        "            verbose=2,\n",
-        "            )\n",
-        "        ]\n",
+        "    # EvalCallback(\n",
+        "    #     model.get_env(),\n",
+        "    #     eval_freq = 50e3,\n",
+        "    #     n_eval_episodes=1,\n",
+        "    #     # best_model_save_path=os.path.join(savefolder, filename),\n",
+        "    #     render=False,\n",
+        "    #     callback_after_eval=FigureRecorderCallback()\n",
+        "    #     ),\n",
+        "    WandbCallback(\n",
+        "        model_save_path=f\"models/{run.id}\",\n",
+        "        verbose=2,\n",
+        "        gradient_save_freq=10000\n",
+        "        )\n",
+        "    ]\n",
         "\n",
         "model.learn(\n",
         "    total_timesteps=config[\"total_timesteps\"],\n",
