--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-PPO-LL-rew/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,15 +12,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8bgoqZRSz3FQ",
-        "outputId": "5b8c846b-db2d-4a4f-e6db-870f2a64b451"
+        "outputId": "4ba08ac7-646b-47ed-8de5-749c6b8e09e9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cat: /root/.ssh/id_ed25519.pub: No such file or directory\n"
+          ]
+        }
+      ],
       "source": [
         "!cat ~/.ssh/id_ed25519.pub\n",
         "PUB_KEY = \"ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKRCMs6GPJ5kNi/fNVNf8Ki/QNwHS494mwuysriErNVs root@ac3a85e94cb7\""
@@ -37,15 +45,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "I4Uab7q5v8nS",
-        "outputId": "d9df4964-ffaf-4763-f471-51e931e08540"
+        "outputId": "4ca61d7e-0c6d-4adc-853e-34d041e12a60"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "# github.com:22 SSH-2.0-babeld-7f91b4d6\n",
+            "Cloning into 'RL_rocket'...\n",
+            "Warning: Permanently added the ED25519 host key for IP address '140.82.112.4' to the list of known hosts.\n",
+            "remote: Enumerating objects: 866, done.\u001b[K\n",
+            "remote: Counting objects: 100% (93/93), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (79/79), done.\u001b[K\n",
+            "remote: Total 866 (delta 30), reused 31 (delta 14), pack-reused 773\u001b[K\n",
+            "Receiving objects: 100% (866/866), 14.19 MiB | 12.66 MiB/s, done.\n",
+            "Resolving deltas: 100% (518/518), done.\n"
+          ]
+        }
+      ],
       "source": [
         "GITHUB_PRIVATE_KEY = \"\"\"-----BEGIN OPENSSH PRIVATE KEY-----\n",
         "b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAMwAAAAtzc2gtZW\n",
@@ -80,21 +104,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sWzlYmiY141N",
-        "outputId": "75c12146-aca2-4792-9dcd-e3ea3015f9f3"
+        "outputId": "aeca5488-142e-4b9d-9448-93741c4a1628"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: stable-baselines3==1.5.0 in /usr/local/lib/python3.7/dist-packages (1.5.0)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (3.2.2)\n",
+            "Requirement already satisfied: torch>=1.8.1 in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.11.0+cu113)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.21.6)\n",
+            "Requirement already satisfied: gym==0.21 in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (0.21.0)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.3.5)\n",
+            "Requirement already satisfied: cloudpickle in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.3.0)\n",
+            "Requirement already satisfied: importlib-metadata>=4.8.1 in /usr/local/lib/python3.7/dist-packages (from gym==0.21->stable-baselines3==1.5.0) (4.11.4)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.8.1->gym==0.21->stable-baselines3==1.5.0) (3.8.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.8.1->gym==0.21->stable-baselines3==1.5.0) (4.1.1)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (3.0.9)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (0.11.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (2.8.2)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (1.4.3)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->matplotlib->stable-baselines3==1.5.0) (1.15.0)\n",
+            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas->stable-baselines3==1.5.0) (2022.1)\n",
+            "\u001b[31mERROR: RL_rocket/. is not a valid editable requirement. It should either be a path to a local project or a VCS URL (beginning with bzr+http, bzr+https, bzr+ssh, bzr+sftp, bzr+ftp, bzr+lp, bzr+file, git+http, git+https, git+ssh, git+git, git+file, hg+file, hg+http, hg+https, hg+ssh, hg+static-http, svn+ssh, svn+http, svn+https, svn+svn, svn+file).\u001b[0m\n",
+            "[Errno 2] No such file or directory: 'RL_rocket'\n",
+            "/content/RL_rocket\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install stable-baselines3==1.5.0\n",
-        "%cd RL_rocket\n",
-        "import sys, os\n",
-        "sys.path.append(os.getcwd())\n",
-        "!pip install -e ."
+        "\n",
+        "!pip install -e RL_rocket/.\n",
+        "\n",
+        "%cd RL_rocket"
       ]
     },
     {
@@ -108,13 +159,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Sb-HCUk1v2KO",
-        "outputId": "fd2451c9-7c80-48e3-a613-1f858c88ccd6"
+        "id": "Sb-HCUk1v2KO"
       },
       "outputs": [],
       "source": [
@@ -178,11 +225,100 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "_MC0kpJp6Yuf"
+        "id": "_MC0kpJp6Yuf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        },
+        "outputId": "b5cbe3c1-908c-4b7c-9c48-71b605062f1b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "        window._wandbApiKey = new Promise((resolve, reject) => {\n",
+              "            function loadScript(url) {\n",
+              "            return new Promise(function(resolve, reject) {\n",
+              "                let newScript = document.createElement(\"script\");\n",
+              "                newScript.onerror = reject;\n",
+              "                newScript.onload = resolve;\n",
+              "                document.body.appendChild(newScript);\n",
+              "                newScript.src = url;\n",
+              "            });\n",
+              "            }\n",
+              "            loadScript(\"https://cdn.jsdelivr.net/npm/postmate/build/postmate.min.js\").then(() => {\n",
+              "            const iframe = document.createElement('iframe')\n",
+              "            iframe.style.cssText = \"width:0;height:0;border:none\"\n",
+              "            document.body.appendChild(iframe)\n",
+              "            const handshake = new Postmate({\n",
+              "                container: iframe,\n",
+              "                url: 'https://wandb.ai/authorize'\n",
+              "            });\n",
+              "            const timeout = setTimeout(() => reject(\"Couldn't auto authenticate\"), 5000)\n",
+              "            handshake.then(function(child) {\n",
+              "                child.on('authorize', data => {\n",
+              "                    clearTimeout(timeout)\n",
+              "                    resolve(data)\n",
+              "                });\n",
+              "            });\n",
+              "            })\n",
+              "        });\n",
+              "    "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Tracking run with wandb version 0.12.21"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Run data is saved locally in <code>/content/RL_rocket/wandb/run-20220708_124801-1llyoxbf</code>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Syncing run <strong><a href=\"https://wandb.ai/tuxliri/sb3/runs/1llyoxbf\" target=\"_blank\">morning-field-29</a></strong> to <a href=\"https://wandb.ai/tuxliri/sb3\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "# Choose the folder to store tensorboard logs\n",
         "TENSORBOARD_LOGS_DIR = \"./logs\"\n",
@@ -241,12 +377,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "oZ1ZGrab6TJh",
-        "outputId": "84abd60c-c484-40f4-dbd4-48995726873a"
+        "id": "oZ1ZGrab6TJh"
       },
       "outputs": [],
       "source": [
@@ -287,7 +418,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "V9oUFIgFnQne"
+      },
       "source": [
         "Setup tensorboard dashboard:"
       ]
@@ -295,7 +428,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "xplQgHJinQne"
+      },
       "outputs": [],
       "source": [
         "# Load the TensorBoard notebook extension\n",
@@ -308,9 +443,9 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "include_colab_link": true,
       "name": "run_my_environment.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3.7.13 ('beginnersPPO': conda)",
