--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8bgoqZRSz3FQ",
-        "outputId": "4ba08ac7-646b-47ed-8de5-749c6b8e09e9"
+        "outputId": "d7c708cc-8f8c-43d0-8d3d-2c72955ce7b5"
       },
       "outputs": [
         {
@@ -45,13 +45,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "I4Uab7q5v8nS",
-        "outputId": "4ca61d7e-0c6d-4adc-853e-34d041e12a60"
+        "outputId": "1b0304fe-9b01-4060-c765-5aaa16600cfc"
       },
       "outputs": [
         {
@@ -60,13 +60,13 @@
           "text": [
             "# github.com:22 SSH-2.0-babeld-7f91b4d6\n",
             "Cloning into 'RL_rocket'...\n",
-            "Warning: Permanently added the ED25519 host key for IP address '140.82.112.4' to the list of known hosts.\n",
-            "remote: Enumerating objects: 866, done.\u001b[K\n",
-            "remote: Counting objects: 100% (93/93), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (79/79), done.\u001b[K\n",
-            "remote: Total 866 (delta 30), reused 31 (delta 14), pack-reused 773\u001b[K\n",
-            "Receiving objects: 100% (866/866), 14.19 MiB | 12.66 MiB/s, done.\n",
-            "Resolving deltas: 100% (518/518), done.\n"
+            "Warning: Permanently added the ED25519 host key for IP address '140.82.114.4' to the list of known hosts.\n",
+            "remote: Enumerating objects: 874, done.\u001b[K\n",
+            "remote: Counting objects: 100% (101/101), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (84/84), done.\u001b[K\n",
+            "remote: Total 874 (delta 35), reused 36 (delta 17), pack-reused 773\u001b[K\n",
+            "Receiving objects: 100% (874/874), 14.19 MiB | 15.41 MiB/s, done.\n",
+            "Resolving deltas: 100% (522/522), done.\n"
           ]
         }
       ],
@@ -104,13 +104,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sWzlYmiY141N",
-        "outputId": "aeca5488-142e-4b9d-9448-93741c4a1628"
+        "outputId": "7d00feda-b919-4f1a-9a2a-18614c5eb3a7"
       },
       "outputs": [
         {
@@ -119,24 +119,59 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: stable-baselines3==1.5.0 in /usr/local/lib/python3.7/dist-packages (1.5.0)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (3.2.2)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.3.5)\n",
             "Requirement already satisfied: torch>=1.8.1 in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.11.0+cu113)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.21.6)\n",
             "Requirement already satisfied: gym==0.21 in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (0.21.0)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.3.5)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (3.2.2)\n",
             "Requirement already satisfied: cloudpickle in /usr/local/lib/python3.7/dist-packages (from stable-baselines3==1.5.0) (1.3.0)\n",
             "Requirement already satisfied: importlib-metadata>=4.8.1 in /usr/local/lib/python3.7/dist-packages (from gym==0.21->stable-baselines3==1.5.0) (4.11.4)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.8.1->gym==0.21->stable-baselines3==1.5.0) (3.8.0)\n",
             "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.8.1->gym==0.21->stable-baselines3==1.5.0) (4.1.1)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (3.0.9)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (0.11.0)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.8.1->gym==0.21->stable-baselines3==1.5.0) (3.8.0)\n",
             "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (2.8.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (0.11.0)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (1.4.3)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->stable-baselines3==1.5.0) (3.0.9)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->matplotlib->stable-baselines3==1.5.0) (1.15.0)\n",
             "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas->stable-baselines3==1.5.0) (2022.1)\n",
-            "\u001b[31mERROR: RL_rocket/. is not a valid editable requirement. It should either be a path to a local project or a VCS URL (beginning with bzr+http, bzr+https, bzr+ssh, bzr+sftp, bzr+ftp, bzr+lp, bzr+file, git+http, git+https, git+ssh, git+git, git+file, hg+file, hg+http, hg+https, hg+ssh, hg+static-http, svn+ssh, svn+http, svn+https, svn+svn, svn+file).\u001b[0m\n",
-            "[Errno 2] No such file or directory: 'RL_rocket'\n",
-            "/content/RL_rocket\n"
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Obtaining file:///content/RL_rocket/RL_rocket\n",
+            "Requirement already satisfied: gym==0.21.0 in /usr/local/lib/python3.7/dist-packages (from my-environment==0.0.1) (0.21.0)\n",
+            "Requirement already satisfied: scipy==1.7.3 in /usr/local/lib/python3.7/dist-packages (from my-environment==0.0.1) (1.7.3)\n",
+            "Requirement already satisfied: pygame==2.1.2 in /usr/local/lib/python3.7/dist-packages (from my-environment==0.0.1) (2.1.2)\n",
+            "Requirement already satisfied: numpy==1.21.* in /usr/local/lib/python3.7/dist-packages (from my-environment==0.0.1) (1.21.6)\n",
+            "Requirement already satisfied: wandb in /usr/local/lib/python3.7/dist-packages (from my-environment==0.0.1) (0.12.21)\n",
+            "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.7/dist-packages (from gym==0.21.0->my-environment==0.0.1) (1.3.0)\n",
+            "Requirement already satisfied: importlib-metadata>=4.8.1 in /usr/local/lib/python3.7/dist-packages (from gym==0.21.0->my-environment==0.0.1) (4.11.4)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.8.1->gym==0.21.0->my-environment==0.0.1) (3.8.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.8.1->gym==0.21.0->my-environment==0.0.1) (4.1.1)\n",
+            "Requirement already satisfied: requests<3,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (2.23.0)\n",
+            "Requirement already satisfied: promise<3,>=2.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (2.3)\n",
+            "Requirement already satisfied: GitPython>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (3.1.27)\n",
+            "Requirement already satisfied: protobuf<4.0dev,>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (3.17.3)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (3.13)\n",
+            "Requirement already satisfied: docker-pycreds>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (0.4.0)\n",
+            "Requirement already satisfied: shortuuid>=0.5.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (1.0.9)\n",
+            "Requirement already satisfied: psutil>=5.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (5.4.8)\n",
+            "Requirement already satisfied: six>=1.13.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (1.15.0)\n",
+            "Requirement already satisfied: Click!=8.0.0,>=7.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (7.1.2)\n",
+            "Requirement already satisfied: sentry-sdk>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (1.7.0)\n",
+            "Requirement already satisfied: pathtools in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (0.1.2)\n",
+            "Requirement already satisfied: setproctitle in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (1.2.3)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from wandb->my-environment==0.0.1) (57.4.0)\n",
+            "Requirement already satisfied: gitdb<5,>=4.0.1 in /usr/local/lib/python3.7/dist-packages (from GitPython>=1.0.0->wandb->my-environment==0.0.1) (4.0.9)\n",
+            "Requirement already satisfied: smmap<6,>=3.0.1 in /usr/local/lib/python3.7/dist-packages (from gitdb<5,>=4.0.1->GitPython>=1.0.0->wandb->my-environment==0.0.1) (5.0.0)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb->my-environment==0.0.1) (2.10)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb->my-environment==0.0.1) (2022.6.15)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb->my-environment==0.0.1) (1.24.3)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb->my-environment==0.0.1) (3.0.4)\n",
+            "Installing collected packages: my-environment\n",
+            "  Attempting uninstall: my-environment\n",
+            "    Found existing installation: my-environment 0.0.1\n",
+            "    Can't uninstall 'my-environment'. No files were found to uninstall.\n",
+            "  Running setup.py develop for my-environment\n",
+            "Successfully installed my-environment-0.0.1\n",
+            "/content/RL_rocket/RL_rocket\n"
           ]
         }
       ],
@@ -159,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 11,
       "metadata": {
         "id": "Sb-HCUk1v2KO"
       },
@@ -225,71 +260,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "_MC0kpJp6Yuf",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 104
+          "height": 52
         },
-        "outputId": "b5cbe3c1-908c-4b7c-9c48-71b605062f1b"
+        "outputId": "f8bd1d0e-f28f-45c1-81f9-5da3837138e8"
       },
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "        window._wandbApiKey = new Promise((resolve, reject) => {\n",
-              "            function loadScript(url) {\n",
-              "            return new Promise(function(resolve, reject) {\n",
-              "                let newScript = document.createElement(\"script\");\n",
-              "                newScript.onerror = reject;\n",
-              "                newScript.onload = resolve;\n",
-              "                document.body.appendChild(newScript);\n",
-              "                newScript.src = url;\n",
-              "            });\n",
-              "            }\n",
-              "            loadScript(\"https://cdn.jsdelivr.net/npm/postmate/build/postmate.min.js\").then(() => {\n",
-              "            const iframe = document.createElement('iframe')\n",
-              "            iframe.style.cssText = \"width:0;height:0;border:none\"\n",
-              "            document.body.appendChild(iframe)\n",
-              "            const handshake = new Postmate({\n",
-              "                container: iframe,\n",
-              "                url: 'https://wandb.ai/authorize'\n",
-              "            });\n",
-              "            const timeout = setTimeout(() => reject(\"Couldn't auto authenticate\"), 5000)\n",
-              "            handshake.then(function(child) {\n",
-              "                child.on('authorize', data => {\n",
-              "                    clearTimeout(timeout)\n",
-              "                    resolve(data)\n",
-              "                });\n",
-              "            });\n",
-              "            })\n",
-              "        });\n",
-              "    "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Tracking run with wandb version 0.12.21"
+              "Finishing last run (ID:3egv552h) before initializing another..."
             ]
           },
           "metadata": {}
@@ -301,19 +289,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Run data is saved locally in <code>/content/RL_rocket/wandb/run-20220708_124801-1llyoxbf</code>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "Syncing run <strong><a href=\"https://wandb.ai/tuxliri/sb3/runs/1llyoxbf\" target=\"_blank\">morning-field-29</a></strong> to <a href=\"https://wandb.ai/tuxliri/sb3\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
+              "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
             ]
           },
           "metadata": {}
@@ -332,7 +308,7 @@
         "\n",
         "config = {\n",
         "\"policy_type\": \"MlpPolicy\",\n",
-        "\"total_timesteps\": int(1.5e5),\n",
+        "\"total_timesteps\": int(1.5e6),\n",
         "}\n",
         "\n",
         "run = wandb.init(\n",
