--- a/Soft_Landing_Falcon_9.ipynb
+++ b/Soft_Landing_Falcon_9.ipynb
@@ -137,10 +137,9 @@
         "\n",
         "In this first attempt at modeling and control we will neglect the change in rocket mass due to fuel burn.\n",
         "\n",
-        "![](https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/LM_illustration_02-IT.png/368px-LM_illustration_02-IT.png)\n",
+        "![](https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/ORBCOMM-2_%2823802549782%29.jpg/400px-ORBCOMM-2_%2823802549782%29.jpg)\n",
         "\n",
-        "<a title=\"LM_illustration_02.jpg: NASA Marshall Space Flight Center (NASA-MSFC)\n",
-        "derivative work: Adert [Public domain], via Wikimedia Commons\" href=\"https://commons.wikimedia.org/wiki/File:LM_illustration_02-IT.png\"></a>\n",
+        "<a title=\"ORBCOMM-2, via Wikimedia Commons\" href=\"https://commons.wikimedia.org/wiki/File:ORBCOMM-2_(23802549782).jpg\"></a>\n",
         "\n",
         "LM_illustration_02.jpg: NASA Marshall Space Flight Center (NASA-MSFC)derivative work: Adert [Public domain]\n",
         "\n",
