--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-PPO-sparse-rew/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-PPO-gaudet-rew/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -93,7 +93,7 @@
         "\n",
         "# Note the `git@github.com` syntax, which will fetch over SSH instead of\n",
         "# HTTP.\n",
-        "!git clone --branch test-PPO-sparse-rew git@github.com:Tuxliri/RL_rocket.git\n",
+        "!git clone --branch test-PPO-gaudet-rew git@github.com:Tuxliri/RL_rocket.git\n",
         "\n",
         "!cd .."
       ]
