--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-PPO-gaudet-reward/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -222,7 +222,7 @@
         "        return env\n",
         "\n",
         "env = DummyVecEnv([make_env])\n",
-        "env = VecVideoRecorder(env, video_folder=f\"videos/{run.id}\", record_video_trigger=lambda x : x % 10000 == 0, video_length=400)\n"
+        "env = VecVideoRecorder(env, video_folder=f\"videos/{run.id}\", record_video_trigger=lambda x : x % 50000 == 0, video_length=1600)\n"
       ]
     },
     {
@@ -271,9 +271,9 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "name": "run_my_environment.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3.7.13 ('beginnersPPO': conda)",
