Refactored main script
Refactored problem setup and setup evaluation callback with recording

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -125,7 +125,6 @@
         "from stable_baselines3.common.callbacks import EvalCallback\n",
         "from stable_baselines3.common.evaluation import evaluate_policy\n",
         "from stable_baselines3.common.monitor import Monitor\n",
-        "from stable_baselines3.common.vec_env.vec_normalize import VecNormalize\n",
         "from stable_baselines3.common.env_util import make_vec_env\n",
         "from stable_baselines3.common.utils import set_random_seed\n",
         "from wandb.integration.sb3 import WandbCallback\n",
@@ -134,9 +133,9 @@
         "\n",
         "import my_environment\n",
         "from my_environment.utils.callbacks import FigureRecorderCallback\n",
-        "from my_environment.wrappers.wrappers import DiscreteActions, DiscreteActions3DOF\n",
+        "from my_environment.wrappers.wrappers import DiscreteActions3DOF\n",
         "from my_environment.envs import Rocket1D\n",
-        "from gym.wrappers import FlattenObservation, FilterObservation\n"
+        "from gym.wrappers import TimeLimit\n"
       ]
     },
     {
@@ -179,17 +178,17 @@
         "# Choose the folder to store tensorboard logs\n",
         "TENSORBOARD_LOGS_DIR = \"./logs\"\n",
         "\n",
-        "RANDOM_SEED = 42\n",
-        "env_id = \"my_environment/Falcon3DOF-v0\"\n",
-        "initial_conditions = [0, 500, np.pi/2, 0, -50, 0]\n",
-        "initial_conditions_range = [0,50,0,0,10,0]\n",
-        "timestep = 0.05\n",
-        "\n",
-        "\n",
         "config = {\n",
-        "\"policy_type\": \"MlpPolicy\",\n",
-        "\"total_timesteps\": int(1.5e6),\n",
-        "}\n",
+        "        \"env_id\" : \"my_environment/Falcon3DOF-v0\",\n",
+        "        \"policy_type\": \"MlpPolicy\",\n",
+        "        \"total_timesteps\": int(5e3),\n",
+        "        \"timestep\" : 0.05,\n",
+        "        \"max_time\" : 40,\n",
+        "        \"RANDOM_SEED\" : 42,\n",
+        "        \"initial_conditions\" : [0, 500, np.pi/2, 0, -50, 0],\n",
+        "        \"initial_conditions_range\" : [0,50,0,0,0,0]\n",
+        "    }\n",
+        "config[\"max_ep_timesteps\"] = int(config[\"max_time\"]/config[\"timestep\"])\n",
         "\n",
         "run = wandb.init(\n",
         "    project=\"RL_rocket\",\n",
@@ -198,31 +197,30 @@
         "    monitor_gym=True,  # auto-upload the videos of agents playing the game\n",
         "    save_code=True,  # optional\n",
         ")\n",
-        "def make_env():\n",
-        "        env = gym.make(\n",
-        "        env_id,\n",
-        "        IC=initial_conditions,\n",
-        "        ICRange=initial_conditions_range,\n",
-        "        timestep=timestep,\n",
-        "        seed=RANDOM_SEED\n",
-        "        )\n",
-        "        \n",
-        "        # Define a new custom action space with only three actions:\n",
-        "        # - no thrust\n",
-        "        # - max thrust gimbaled right\n",
-        "        # - max thrust gimbaled left\n",
-        "        # - max thrust downwards\n",
-        "    \n",
-        "        env = DiscreteActions3DOF(env)\n",
-        "        env = Monitor(\n",
-        "            env,\n",
-        "            allow_early_resets=True,\n",
-        "            filename=\"logs_PPO\",\n",
-        "            )\n",
-        "        return env\n",
         "\n",
-        "env = DummyVecEnv([make_env])\n",
-        "env = VecVideoRecorder(env, video_folder=f\"videos/{run.id}\", record_video_trigger=lambda x : x % 50000 == 0, video_length=1600)\n"
+        "def make_env():\n",
+        "    env = gym.make(\n",
+        "    config[\"env_id\"],\n",
+        "    IC=config[\"initial_conditions\"],\n",
+        "    ICRange=config[\"initial_conditions_range\"],\n",
+        "    timestep=config[\"timestep\"],\n",
+        "    seed=config[\"RANDOM_SEED\"]\n",
+        "    )\n",
+        "    \n",
+        "    # Define a new custom action space with only three actions:\n",
+        "    # - no thrust\n",
+        "    # - max thrust gimbaled right\n",
+        "    # - max thrust gimbaled left\n",
+        "    # - max thrust downwards\n",
+        "\n",
+        "    env = DiscreteActions3DOF(env)\n",
+        "    env = TimeLimit(env, max_episode_steps=config[\"max_ep_timesteps\"])\n",
+        "    env = Monitor(\n",
+        "        env,\n",
+        "        allow_early_resets=True,\n",
+        "        filename=\"logs_PPO\",\n",
+        "        )\n",
+        "    return env"
       ]
     },
     {
@@ -233,29 +231,31 @@
       },
       "outputs": [],
       "source": [
-        "##\n",
+        "env=make_env()\n",
         "model = PPO(\n",
         "    config[\"policy_type\"],\n",
         "    env,\n",
-        "    tensorboard_log=TENSORBOARD_LOGS_DIR,\n",
+        "    tensorboard_log=f\"runs/{run.id}\",\n",
         "    verbose=1,\n",
-        "    seed=RANDOM_SEED\n",
-        ")\n",
+        "    seed=config[\"RANDOM_SEED\"],\n",
+        "    ent_coef=0.01,\n",
+        "    )\n",
         "\n",
-        "\n",
+        "eval_env = VecVideoRecorder(model.get_env(), video_folder=f\"videos/{run.id}\",\n",
+        "            record_video_trigger=lambda x : x == 0, video_length=config[\"max_ep_timesteps\"])\n",
+        "            \n",
         "callbacksList = [\n",
-        "    # EvalCallback(\n",
-        "    #     model.get_env(),\n",
-        "    #     eval_freq = 50e3,\n",
-        "    #     n_eval_episodes=1,\n",
-        "    #     # best_model_save_path=os.path.join(savefolder, filename),\n",
-        "    #     render=False,\n",
-        "    #     callback_after_eval=FigureRecorderCallback()\n",
-        "    #     ),\n",
+        "    EvalCallback(\n",
+        "        eval_env,\n",
+        "        eval_freq = 50e3,\n",
+        "        n_eval_episodes = 5,\n",
+        "        render=False,\n",
+        "        # callback_after_eval=FigureRecorderCallback()\n",
+        "        ),\n",
         "    WandbCallback(\n",
         "        model_save_path=f\"models/{run.id}\",\n",
         "        verbose=2,\n",
-        "        gradient_save_freq=30000\n",
+        "        gradient_save_freq=10000\n",
         "        )\n",
         "    ]\n",
         "\n",
@@ -264,7 +264,7 @@
         "    callback=callbacksList\n",
         ")\n",
         "\n",
-        "rewards = evaluate_policy(model=model,env=model.get_env(),render=False,n_eval_episodes=10)"
+        "run.finish()"
       ]
     }
   ],
