--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-PPO-gaudet-reward/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -185,8 +185,8 @@
         "        \"timestep\" : 0.05,\n",
         "        \"max_time\" : 40,\n",
         "        \"RANDOM_SEED\" : 42,\n",
-        "        \"initial_conditions\" : [0, 500, np.pi/2, 0, -50, 0],\n",
-        "        \"initial_conditions_range\" : [0,50,0,0,0,0]\n",
+        "        \"initial_conditions\" : [50, 500, np.pi/2, 0, -50, 0],\n",
+        "        \"initial_conditions_range\" : [5,50,15*np.pi/180,0,0,0.01]\n",
         "    }\n",
         "config[\"max_ep_timesteps\"] = int(config[\"max_time\"]/config[\"timestep\"])\n",
         "\n",
@@ -271,9 +271,9 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "include_colab_link": true,
       "name": "run_my_environment.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3.7.13 ('beginnersPPO': conda)",
