--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-PPO-gaudet-reward/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -181,7 +181,7 @@
         "config = {\n",
         "        \"env_id\" : \"my_environment/Falcon3DOF-v0\",\n",
         "        \"policy_type\": \"MlpPolicy\",\n",
-        "        \"total_timesteps\": int(5e3),\n",
+        "        \"total_timesteps\": int(3e6),\n",
         "        \"timestep\" : 0.05,\n",
         "        \"max_time\" : 40,\n",
         "        \"RANDOM_SEED\" : 42,\n",
@@ -271,12 +271,12 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "name": "run_my_environment.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.7.13 ('beginnersPPO': conda)",
+      "display_name": "Python 3.8.10 64-bit",
       "language": "python",
       "name": "python3"
     },
@@ -290,11 +290,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.12"
+      "version": "3.8.10"
     },
     "vscode": {
       "interpreter": {
-        "hash": "6bb16cade9d36141ae9213d884fb1ae293e1d9fda2be68716a113c15fbf181a7"
+        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
       }
     }
   },
