--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -152,9 +152,7 @@
       "metadata": {
         "id": "OZh-0qjN6l8B"
       },
-      "source": [
-        "Setup tensorboard dashboard"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -186,7 +184,8 @@
         "        \"max_time\" : 40,\n",
         "        \"RANDOM_SEED\" : 42,\n",
         "        \"initial_conditions\" : [50, 500, np.pi/2, 0, -50, 0],\n",
-        "        \"initial_conditions_range\" : [5,50,15*np.pi/180,0,0,0.01]\n",
+        "        \"initial_conditions_range\" : [5,50,15*np.pi/180,0,0,0.01],\n",
+        "        \"eval_freq\" : 50e3\n",
         "    }\n",
         "config[\"max_ep_timesteps\"] = int(config[\"max_time\"]/config[\"timestep\"])\n",
         "\n",
@@ -247,9 +246,10 @@
         "callbacksList = [\n",
         "    EvalCallback(\n",
         "        eval_env,\n",
-        "        eval_freq = 50e3,\n",
+        "        eval_freq = config[\"eval_freq\"],\n",
         "        n_eval_episodes = 5,\n",
         "        render=False,\n",
+        "        deterministic=True,\n",
         "        # callback_after_eval=FigureRecorderCallback()\n",
         "        ),\n",
         "    WandbCallback(\n",
@@ -276,7 +276,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.8.10 64-bit",
+      "display_name": "Python 3.7.12 ('beginnersPPO': conda)",
       "language": "python",
       "name": "python3"
     },
@@ -290,11 +290,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.7.12"
     },
     "vscode": {
       "interpreter": {
-        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+        "hash": "6bb16cade9d36141ae9213d884fb1ae293e1d9fda2be68716a113c15fbf181a7"
       }
     }
   },
