Changed evaluation environment and cleaned imports

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -120,21 +120,17 @@
         "import numpy as np\n",
         "import stable_baselines3\n",
         "\n",
-        "from stable_baselines3 import A2C, DQN, PPO, TD3\n",
+        "from stable_baselines3 import PPO\n",
         "from tensorboard import program\n",
         "from stable_baselines3.common.callbacks import EvalCallback\n",
-        "from stable_baselines3.common.evaluation import evaluate_policy\n",
         "from stable_baselines3.common.monitor import Monitor\n",
         "from stable_baselines3.common.env_util import make_vec_env\n",
         "from stable_baselines3.common.utils import set_random_seed\n",
         "from wandb.integration.sb3 import WandbCallback\n",
         "from stable_baselines3.common.vec_env.dummy_vec_env import DummyVecEnv\n",
-        "from stable_baselines3.common.vec_env.vec_video_recorder import VecVideoRecorder\n",
         "\n",
         "import my_environment\n",
-        "from my_environment.utils.callbacks import FigureRecorderCallback\n",
-        "from my_environment.wrappers.wrappers import DiscreteActions3DOF\n",
-        "from my_environment.envs import Rocket1D\n",
+        "from my_environment.wrappers.wrappers import DiscreteActions3DOF, RecordVideoFigure\n",
         "from gym.wrappers import TimeLimit\n"
       ]
     },
@@ -240,8 +236,13 @@
         "    ent_coef=0.01,\n",
         "    )\n",
         "\n",
-        "eval_env = VecVideoRecorder(model.get_env(), video_folder=f\"videos/{run.id}\",\n",
-        "            record_video_trigger=lambda x : x == 0, video_length=config[\"max_ep_timesteps\"])\n",
+        "def make_eval_env():\n",
+        "        training_env = make_env()\n",
+        "        return RecordVideoFigure(training_env, video_folder=f\"videos/{run.id}\",\n",
+        "        image_folder=f\"images/{run.id}\", episode_trigger= lambda x: x%5==0 )\n",
+        "\n",
+        "  \n",
+        "eval_env = DummyVecEnv([make_eval_env])\n",
         "            \n",
         "callbacksList = [\n",
         "    EvalCallback(\n",
@@ -250,7 +251,6 @@
         "        n_eval_episodes = 5,\n",
         "        render=False,\n",
         "        deterministic=True,\n",
-        "        # callback_after_eval=FigureRecorderCallback()\n",
         "        ),\n",
         "    WandbCallback(\n",
         "        model_save_path=f\"models/{run.id}\",\n",
