Fixed colab url

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -3,27 +3,27 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-PPO-gaudet-reward/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/master/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "8bgoqZRSz3FQ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "8bgoqZRSz3FQ",
         "outputId": "b883c756-5d06-43c0-f653-86676a5add8c"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "cat: /root/.ssh/id_ed25519.pub: No such file or directory\n"
           ]
@@ -47,16 +47,16 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "I4Uab7q5v8nS",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "I4Uab7q5v8nS",
         "outputId": "c10d4094-9d73-407f-d445-cbf5aa0e9527"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "# github.com:22 SSH-2.0-babeld-b9c2a189\n",
             "Cloning into 'RL_rocket'...\n",
@@ -93,7 +93,7 @@
         "\n",
         "# Note the `git@github.com` syntax, which will fetch over SSH instead of\n",
         "# HTTP.\n",
-        "!git clone --branch test-PPO-gaudet-reward git@github.com:Tuxliri/RL_rocket.git\n",
+        "!git clone --branch master git@github.com:Tuxliri/RL_rocket.git\n",
         "\n",
         "!cd .."
       ]
@@ -102,16 +102,16 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "sWzlYmiY141N",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "sWzlYmiY141N",
         "outputId": "b29bdb0a-c577-443f-d52a-8c65efc4d0c5"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting stable-baselines3==1.5.0\n",
@@ -224,16 +224,16 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "Sb-HCUk1v2KO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Sb-HCUk1v2KO",
         "outputId": "6c10c7ee-cee5-43bd-b156-06abd747ba68"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "pygame 2.1.2 (SDL 2.0.16, Python 3.7.13)\n",
             "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
@@ -279,9 +279,7 @@
       "metadata": {
         "id": "OZh-0qjN6l8B"
       },
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -298,96 +296,66 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "_MC0kpJp6Yuf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 106
         },
+        "id": "_MC0kpJp6Yuf",
         "outputId": "202a1adb-63df-4a09-c0b1-2d1a6c5dfd16"
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
+            "application/javascript": "\n        window._wandbApiKey = new Promise((resolve, reject) => {\n            function loadScript(url) {\n            return new Promise(function(resolve, reject) {\n                let newScript = document.createElement(\"script\");\n                newScript.onerror = reject;\n                newScript.onload = resolve;\n                document.body.appendChild(newScript);\n                newScript.src = url;\n            });\n            }\n            loadScript(\"https://cdn.jsdelivr.net/npm/postmate/build/postmate.min.js\").then(() => {\n            const iframe = document.createElement('iframe')\n            iframe.style.cssText = \"width:0;height:0;border:none\"\n            document.body.appendChild(iframe)\n            const handshake = new Postmate({\n                container: iframe,\n                url: 'https://wandb.ai/authorize'\n            });\n            const timeout = setTimeout(() => reject(\"Couldn't auto authenticate\"), 5000)\n            handshake.then(function(child) {\n                child.on('authorize', data => {\n                    clearTimeout(timeout)\n                    resolve(data)\n                });\n            });\n            })\n        });\n    ",
             "text/plain": [
               "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "        window._wandbApiKey = new Promise((resolve, reject) => {\n",
-              "            function loadScript(url) {\n",
-              "            return new Promise(function(resolve, reject) {\n",
-              "                let newScript = document.createElement(\"script\");\n",
-              "                newScript.onerror = reject;\n",
-              "                newScript.onload = resolve;\n",
-              "                document.body.appendChild(newScript);\n",
-              "                newScript.src = url;\n",
-              "            });\n",
-              "            }\n",
-              "            loadScript(\"https://cdn.jsdelivr.net/npm/postmate/build/postmate.min.js\").then(() => {\n",
-              "            const iframe = document.createElement('iframe')\n",
-              "            iframe.style.cssText = \"width:0;height:0;border:none\"\n",
-              "            document.body.appendChild(iframe)\n",
-              "            const handshake = new Postmate({\n",
-              "                container: iframe,\n",
-              "                url: 'https://wandb.ai/authorize'\n",
-              "            });\n",
-              "            const timeout = setTimeout(() => reject(\"Couldn't auto authenticate\"), 5000)\n",
-              "            handshake.then(function(child) {\n",
-              "                child.on('authorize', data => {\n",
-              "                    clearTimeout(timeout)\n",
-              "                    resolve(data)\n",
-              "                });\n",
-              "            });\n",
-              "            })\n",
-              "        });\n",
-              "    "
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n"
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "Tracking run with wandb version 0.12.21"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
+            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
-            ],
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
             "text/html": [
               "Run data is saved locally in <code>/content/wandb/run-20220721_171258-193urr7t</code>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
+            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "Syncing run <strong><a href=\"https://wandb.ai/tuxliri/RL_rocket/runs/193urr7t\" target=\"_blank\">electric-bush-17</a></strong> to <a href=\"https://wandb.ai/tuxliri/RL_rocket\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "Syncing run <strong><a href=\"https://wandb.ai/tuxliri/RL_rocket/runs/193urr7t\" target=\"_blank\">electric-bush-17</a></strong> to <a href=\"https://wandb.ai/tuxliri/RL_rocket\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -444,16 +412,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "oZ1ZGrab6TJh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "oZ1ZGrab6TJh",
         "outputId": "ab787710-4e9c-4e83-8276-938249cb7080"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Using cpu device\n",
             "Wrapping the env in a DummyVecEnv.\n",
@@ -727,12 +695,12 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "name": "run_my_environment.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.7.12 ('beginnersPPO': conda)",
+      "display_name": "Python 3.8.10 64-bit",
       "language": "python",
       "name": "python3"
     },
@@ -746,11 +714,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.12"
+      "version": "3.8.10"
     },
     "vscode": {
       "interpreter": {
-        "hash": "6bb16cade9d36141ae9213d884fb1ae293e1d9fda2be68716a113c15fbf181a7"
+        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
       }
     }
   },
