--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/master/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -14,11 +14,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8bgoqZRSz3FQ",
-        "outputId": "b883c756-5d06-43c0-f653-86676a5add8c"
+        "id": "8bgoqZRSz3FQ"
       },
       "outputs": [],
       "source": [
@@ -39,11 +35,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "I4Uab7q5v8nS",
-        "outputId": "c10d4094-9d73-407f-d445-cbf5aa0e9527"
+        "id": "I4Uab7q5v8nS"
       },
       "outputs": [],
       "source": [
@@ -78,11 +70,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sWzlYmiY141N",
-        "outputId": "b29bdb0a-c577-443f-d52a-8c65efc4d0c5"
+        "id": "sWzlYmiY141N"
       },
       "outputs": [],
       "source": [
@@ -107,11 +95,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Sb-HCUk1v2KO",
-        "outputId": "6c10c7ee-cee5-43bd-b156-06abd747ba68"
+        "id": "Sb-HCUk1v2KO"
       },
       "outputs": [],
       "source": [
@@ -153,7 +137,9 @@
       "metadata": {
         "id": "OZh-0qjN6l8B"
       },
-      "source": []
+      "source": [
+        ""
+      ]
     },
     {
       "cell_type": "markdown",
@@ -170,12 +156,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        },
-        "id": "_MC0kpJp6Yuf",
-        "outputId": "202a1adb-63df-4a09-c0b1-2d1a6c5dfd16"
+        "id": "_MC0kpJp6Yuf"
       },
       "outputs": [],
       "source": [
@@ -194,7 +175,7 @@
         "    \"reward_coefficients\" : {\n",
         "                            \"alfa\" : -0.01, \n",
         "                            \"beta\" : -1e-8,\n",
-        "                            \"eta\" : 2,\n",
+        "                            \"eta\" : 0.2,\n",
         "                            \"gamma\" : -10,\n",
         "                            \"delta\" : -5\n",
         "                            }\n",
@@ -240,11 +221,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oZ1ZGrab6TJh",
-        "outputId": "ab787710-4e9c-4e83-8276-938249cb7080"
+        "id": "oZ1ZGrab6TJh"
       },
       "outputs": [],
       "source": [
@@ -293,9 +270,9 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "include_colab_link": true,
       "name": "run_my_environment.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3.8.10 64-bit",
