Added bounds violation penalty

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -176,7 +176,8 @@
         "                            \"eta\" : 0.2,\n",
         "                            \"gamma\" : -10,\n",
         "                            \"delta\" : -5\n",
-        "                            }\n",
+        "                            },\n",
+        "    \"eval_freq\" : 50e3,\n",
         "}\n",
         "\n",
         "config[\"max_ep_timesteps\"] = int(config[\"max_time\"]/config[\"timestep\"])\n",
