Adjust steps number and eval frequency

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/master/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -137,9 +137,7 @@
       "metadata": {
         "id": "OZh-0qjN6l8B"
       },
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -166,7 +164,7 @@
         "config = {\n",
         "    \"env_id\" : \"my_environment/Falcon3DOF-v0\",\n",
         "    \"policy_type\": \"MlpPolicy\",\n",
-        "    \"total_timesteps\": int(5e3),\n",
+        "    \"total_timesteps\": int(3e6),\n",
         "    \"timestep\" : 0.05,\n",
         "    \"max_time\" : 40,\n",
         "    \"RANDOM_SEED\" : 42,\n",
@@ -178,7 +176,8 @@
         "                            \"eta\" : 0.2,\n",
         "                            \"gamma\" : -10,\n",
         "                            \"delta\" : -5\n",
-        "                            }\n",
+        "                            },\n",
+        "    \"eval_freq\" : 50e3,\n",
         "}\n",
         "\n",
         "config[\"max_ep_timesteps\"] = int(config[\"max_time\"]/config[\"timestep\"])\n",
@@ -270,9 +269,9 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "name": "run_my_environment.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3.8.10 64-bit",
