Fixed evaluation environment
Updated the evaluation environment to use the new reward environment

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -290,6 +290,26 @@
         "\n",
         "env=make_env(config)\n",
         "\n",
+        "def make_eval_env():\n",
+        "    training_env = make_env()\n",
+        "    return RecordVideoFigure(training_env, video_folder=f\"videos/{run.id}\",\n",
+        "    image_folder=f\"images/{run.id}\", episode_trigger= lambda x: x%5==0 )\n",
+        "\n",
+        "callbacksList = [\n",
+        "    EvalCallback(\n",
+        "        eval_env,\n",
+        "        eval_freq = 1e3,\n",
+        "        n_eval_episodes = 5,\n",
+        "        render=False,\n",
+        "        deterministic=True,\n",
+        "        ),\n",
+        "    WandbCallback(\n",
+        "        model_save_path=f\"models/{run.id}\",\n",
+        "        verbose=2,\n",
+        "        gradient_save_freq=10000\n",
+        "        ),\n",
+        "]     \n",
+        "    \n",
         "model.set_env(env)\n",
         "model.learn(\n",
         "    total_timesteps=config[\"total_timesteps\"],\n",
