--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-reward-annealing/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -137,7 +137,9 @@
       "metadata": {
         "id": "OZh-0qjN6l8B"
       },
-      "source": []
+      "source": [
+        ""
+      ]
     },
     {
       "cell_type": "markdown",
@@ -265,7 +267,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "6djos42SjrKv"
+      },
       "outputs": [],
       "source": [
         "def make_env(config):\n",
@@ -295,10 +299,12 @@
         "    return RecordVideoFigure(training_env, video_folder=f\"videos/{run.id}\",\n",
         "    image_folder=f\"images/{run.id}\", episode_trigger= lambda x: x%5==0 )\n",
         "\n",
+        "eval_env = DummyVecEnv([make_eval_env])\n",
+        "\n",
         "callbacksList = [\n",
         "    EvalCallback(\n",
         "        eval_env,\n",
-        "        eval_freq = 1e3,\n",
+        "        eval_freq = config[\"eval_freq\"],\n",
         "        n_eval_episodes = 5,\n",
         "        render=False,\n",
         "        deterministic=True,\n",
@@ -312,7 +318,7 @@
         "    \n",
         "model.set_env(env)\n",
         "model.learn(\n",
-        "    total_timesteps=config[\"total_timesteps\"],\n",
+        "    total_timesteps=config[\"total_timesteps\"]*2,\n",
         "    callback=callbacksList\n",
         ")\n",
         "\n",
@@ -323,9 +329,9 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "include_colab_link": true,
       "name": "run_my_environment.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3.8.10 64-bit",
