Changed hyperparameters of run
Increased the batch_size to 1024

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -124,6 +124,7 @@
         "import wandb\n",
         "import numpy as np\n",
         "import stable_baselines3\n",
+        "import ast\n",
         "\n",
         "from stable_baselines3 import HerReplayBuffer, DDPG, DQN, SAC, TD3\n",
         "from stable_baselines3.her.goal_selection_strategy import GoalSelectionStrategy\n",
@@ -182,6 +183,9 @@
         "# Choose the folder to store tensorboard logs\n",
         "TENSORBOARD_LOGS_DIR = \"./logs\"\n",
         "\n",
+        "def make_net_arch(arch):\n",
+        "    return ast.literal_eval(arch)\n",
+        "\n",
         "config = {\n",
         "    \"env_id\" : \"my_environment/Falcon3DOFHER-v0\",\n",
         "    \"policy_type\": \"MultiInputPolicy\",\n",
@@ -193,7 +197,11 @@
         "    \"initial_conditions_range\" : [5,50,0,0,0,0],\n",
         "    \"online_sampling\" : True,\n",
         "    \"goal_selection_strategy\" : 'future',\n",
-        "}\n",
+        "            \"batch_size\" : 1024,\n",
+        "        \"net_arch\": \"[512, 512, 512]\",\n",
+        "        \"eval_freq\" : 50e3\n",
+        "    }\n",
+        "    \n",
         "config[\"max_ep_timesteps\"] = int(config[\"max_time\"]/config[\"timestep\"])\n",
         "\n",
         "run = wandb.init(\n",
@@ -252,10 +260,13 @@
         "        n_sampled_goal=4,\n",
         "        goal_selection_strategy=config[\"goal_selection_strategy\"],\n",
         "        online_sampling=config[\"online_sampling\"],\n",
+        "        handle_timeout_termination=True,\n",
         "    ),\n",
         "    tensorboard_log=f\"runs/{run.id}\",\n",
         "    seed=config[\"RANDOM_SEED\"],\n",
         "    verbose=1,\n",
+        "    batch_size= config[\"batch_size\"],\n",
+        "    policy_kwargs=dict(net_arch=make_net_arch(config[\"net_arch\"])),\n",
         "    )\n",
         "    \n",
         "def make_eval_env():\n",
