Fixed evaluation environment

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -269,8 +269,7 @@
         "    policy_kwargs=dict(net_arch=make_net_arch(config[\"net_arch\"])),\n",
         "    )\n",
         "    \n",
-        "def make_eval_env():\n",
-        "        training_env = make_env()\n",
+        "def make_eval_env(training_env=env):\n",
         "        return RecordVideoFigure(training_env, video_folder=f\"videos/{run.id}\",\n",
         "        image_folder=f\"images/{run.id}\", episode_trigger= lambda x: x%5==0 )\n",
         "\n",
