Implemented continuous control

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -205,7 +205,8 @@
         "    # - max thrust gimbaled right\n",
         "    # - max thrust gimbaled left\n",
         "    # - max thrust downwards\n",
-        "    env = DiscreteActions3DOF(env)\n",
+        "    \n",
+        "    # env = DiscreteActions3DOF(env)\n",
         "    env = TimeLimit(env, max_episode_steps=config[\"max_ep_timesteps\"])\n",
         "    env = Monitor(\n",
         "        env,\n",
@@ -286,7 +287,8 @@
         "    # - max thrust gimbaled right\n",
         "    # - max thrust gimbaled left\n",
         "    # - max thrust downwards\n",
-        "    env = DiscreteActions3DOF(env)\n",
+        "    \n",
+        "    # env = DiscreteActions3DOF(env)\n",
         "    env = TimeLimit(env, max_episode_steps=config[\"max_ep_timesteps\"])\n",
         "    return env\n",
         "\n",
